moved stuff from SDLControl to SDLWrapper

--- a/projects/debian/CMakeLists.txt
+++ b/projects/debian/CMakeLists.txt
@@ -68,6 +68,7 @@ set(INDICUS_ENGINE_SOURCE_FILES
     ${MY_PROJ_ROOT}/src/engine/World.cpp
     ${MY_PROJ_ROOT}/src/engine/WorldComponent.cpp
     ${MY_PROJ_ROOT}/src/GlWrapper.cpp
+    ${MY_PROJ_ROOT}/src/SDLWrapper.cpp
     ${MY_PROJ_ROOT}/src/ShaderProgram.cpp
     )
 
@@ -106,6 +107,7 @@ set(INDICUS_ENGINE_HEADER_FILES
     ${MY_PROJ_ROOT}/include/engine/World.h
     ${MY_PROJ_ROOT}/include/engine/WorldComponent.h
     ${MY_PROJ_ROOT}/include/GlWrapper.h
+    ${MY_PROJ_ROOT}/include/SDLWrapper.h
     ${MY_PROJ_ROOT}/include/ShaderProgram.h
     )
 
