added 'engine/gl/Uniforms'   (note: still contains temorary experimental boilerplate codes under 'engine/gl/experimental') gl/Shader   names are now pt::Name, not std::string   minor improvement in initialization with 'pt::guard' usage gl/ShaderProgram   names are now pt::Name, not std::string   implemented gl::Uniforms handling DrawingControl   now supports setting up a default ShaderProgram Engine   added hardcoded prototypes of default shaders Services   removed default initialization from constructor (already uses var = val)

--- a/projects/debian/CMakeLists.txt
+++ b/projects/debian/CMakeLists.txt
@@ -108,6 +108,7 @@ set(INDICUS_ENGINE_HEADER_FILES
     ${MY_PROJ_ROOT}/include/engine/gl/GlWrapper.h
     ${MY_PROJ_ROOT}/include/engine/gl/Shader.h
     ${MY_PROJ_ROOT}/include/engine/gl/ShaderProgram.h
+    ${MY_PROJ_ROOT}/include/engine/gl/Uniforms.hpp
     ${MY_PROJ_ROOT}/include/engine/Actor.h
     ${MY_PROJ_ROOT}/include/engine/BillboardComponent.h
     ${MY_PROJ_ROOT}/include/engine/Camera.h
