BillboardComponent   holds an 'FRotator' prototype that'll be moved to 'math3d'   removed junk code that was commented out Components   rotations are now handled with 'FRotator' Camera + descendands   refactored rotation handling   removed 'LookAt' member, direction is now only handled by relative vector   rotation code now uses the Actor message system   default orientation is now along the X axis   added setters for:     Clipping distance     FOV     target 'LookAt' position DrawingManager   added draw stages (3 for now: Standard, UIWorld, UIScreen) Engine   enabled Depth testing   now determines window resolution by cfg/Engine.cfg   added 'DrawingOrigo' and 'ColorMode' uniforms to shaders EngineControl   added GetConfig() WorldComponent   moved some default intializers from ctors to header   default orientation is now along the X axis   'BuildTransformMtx' now uses math3d to constuct the matrices gl/ShaderProgram   added "const char* name" version of 'GetUniform()' test/opengl_test   added 'AxisDisplayComponent' prototype   now draws Origo with colored lines updated doc/

--- a/cfg/Engine.cfg
+++ b/cfg/Engine.cfg
@@ -1,1 +1,8 @@
-
+;iDefaultResWidth=640
+;iDefaultResHeight=360
+;iDefaultResWidth=1280
+;iDefaultResHeight=720
+iDefaultResWidth=1600
+iDefaultResHeight=900
+;iDefaultResWidth=1920
+;iDefaultResHeight=1080
